--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><!-- 구글 머티리얼 아이콘 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><!-- 구글 웹 폰트 1-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><!-- 구글 웹 폰트 2-->
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=block" rel="stylesheet"><!-- 구글 웹 폰트 3, display:block 깜박임 방지-->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
