1218 파이어베이스 작업시작 / 로그인화면작업

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><!-- 구글 웹 폰트 1-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><!-- 구글 웹 폰트 2-->
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=block" rel="stylesheet"><!-- 구글 웹 폰트 3, display:block 깜박임 방지-->
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Jisuimon</title>
   </head>
   <body>
     <noscript>
