--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="/jisuimon/favicon.ico">
+    <link rel="icon" href="/jisuimon/favicon.ico"> <!-- 웹 파비콘 -->
+    <link rel="apple-touch-icon" href="/jisuimon/favicomMobile.ico" /> <!-- 애플 파비콘 (144x144)-->
+    <link rel="shortcut icon" href="/jisuimon/favicomMobile.ico"> <!-- 안드로이드 파비콘 (144x144)-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><!-- 구글 머티리얼 아이콘 -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><!-- 구글 웹 폰트 1-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><!-- 구글 웹 폰트 2-->
