0306 기기에 맞춘 favicon 등록

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="/jisuimon/favicon.ico"> <!-- 웹 파비콘 -->
-    <link rel="apple-touch-icon" href="/jisuimon/favicomMobile.ico" /> <!-- 애플 파비콘 (144x144)-->
-    <link rel="shortcut icon" href="/jisuimon/favicomMobile.ico"> <!-- 안드로이드 파비콘 (144x144)-->
+    <link rel="apple-touch-icon" sizes="144x144" href="/jisuimon/apple-touch-icon.png"> <!-- 파비콘 시작 (파비콘사이트에서 제공된 url 사용)-->
+    <link rel="icon" type="image/png" sizes="32x32" href="/jisuimon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/jisuimon/favicon-16x16.png">
+    <link rel="manifest" href="/jisuimon/site.webmanifest">
+    <link rel="mask-icon" href="/jisuimon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#b91d47">
+    <meta name="theme-color" content="#ffffff"><!-- 파비콘 종료-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><!-- 구글 머티리얼 아이콘 -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><!-- 구글 웹 폰트 1-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><!-- 구글 웹 폰트 2-->
